compiler/src/test/resources/golden/errors/type_unknown_var.dawn
fn f() -> Int = y + 1
