compiler/src/test/resources/golden/errors/type_unknown_var.err
error: undefined variable: y
  --> type_unknown_var.dawn:1:17
  |
1 | fn f() -> Int = y + 1
  |                 ^
